# app-des

./: CMakeLists.txt
config/runtime/: vsomeip.json
head_unit/apps/Ambient/: info.yaml
head_unit/src/: main.cpp  vehiclestatus.cpp
head_unit/src/qml/: AmbientsLayout.qml  GearLayout.qml  main.qml
instrument_cluster/src/: vehicleclient.cpp  vehicleclient.h
instrument_cluster/src/qml/: LeftCluster.qml  main.qml
